--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-common</artifactId>
-      <version>2.2.0</version>
+      <artifactId>hadoop-core</artifactId>
+      <version>1.2.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hama</groupId>
